0.9-15
- utm2lonlat() and lonlat2utm() added
- landsat summary and plot improvements
- change data(met) to be during Hurricane Juan

0.9-14
- fix compile-time warning
- colormap() added, and functionality added to imagep() and drawPalette()
- imagep() and drawPalette() new argument 'axisPalette' (suggestion of C. Richards)
- drawPalette() has new args: plot, pos, levels, and cex.axis
- ctdDecimate() permits user-supplied method function
- data(nao) added; data(soi) updated, and names improved in latter
- landsat support added
- plotProfile() and plotTS() get new argument 'pt.bg'
- plot.section() grids the data if needed
- rename 'sealevelHalifax' dataset as 'sealevel'
- translate some axis names (Spanish, French, German and Mandarin)
- plotProfile() now has ytype="depth"
- mapImage() and friends now demand a map exists first
- runlm() added
- mapScalebar() added
- subset.topo() added
- read.topo() now handles GEBCO netcdf files
- decimate() now handles topo objects
- reverse oceColorsGebco colours for water
- drawIsopycnals() and plotTS(): improve isopycnal labels
- ctdDecimate() handles new method 'unesco'
- coastline improvements (now 3 resolutions)
- webtide() improvements
- read.observatory() added
- read.ctd.itp() added
- mapImage() speeded up (60X in 1deg SST example)
- binApply1D() and binApply2D() added
- binCount1D(), binMean1D(), binCount2D(), and binMean2D() added
- numberAsHMS() added
- gps data type added (provisionally)
- various functions: reorder arguments putting longitude before latitude
- magneticField() replaces magneticDeclination()
- ungrid() added
- mapPlot(): improve zone and meridian aesthetics
- detrend() returns list with detrend vector and coefs
- decodeTime() improvements
- interpBarnes() has new arg 'trim'
- standardDepths() added
- mapLongitudeLatitudeXY() added
- read.ctd.woce() now accepts a format used once by Arctic scientists
- swRrho() added
- plotProfile() now accepts type="o"
- read.adv.nortek(): read salinity