@@ -199,6 +199,7 @@ export("+.section",
        read.drifter,
        read.echosounder,
        read.gps,
+       read.index,
        read.landsat,
        read.lisst,
        read.lobo,
